[2017-01-26 12:06:05 +0100]  remove libgnomeui                                                          karasu      {c8cfab01}
[2017-01-26 12:04:25 +0100]  libgnomeui has been removed from Arch repositories                         karasu      {a6923dfe}
[2017-01-24 09:56:54 +0100]  Enable AUR in pamac if AUR feature is selected                             karasu      {bbd70c8f}
[2017-01-23 19:29:49 +0100]  Remove gstreamer0.10-plugins                                               karasu      {1377f358}
[2017-01-23 19:28:51 +0100]  Remove gstreamer0.10-plugins from list                                     karasu      {351552b8}
[2017-01-23 08:08:41 +0100]  cdrkit got renamed to cdrtools                                             karasu      {e69af041}
[2017-01-23 01:52:57 +0000]  Formatted commit data below... (#696)                                    Phil Wyett    {9cbe31a1}
[2017-01-22 08:55:57 -0600]  Update packages.xml                                                    Dustin Falgout  {78af3f89}
[2017-01-20 09:38:59 +0100]  Let's do some tests first...                                               karasu      {18ebcce0}
[2017-01-19 21:07:06 +0100]  Added labels to back and forward buttons. Ugly, but it's needed by ..      karasu      {33357099}
[2017-01-19 21:03:01 +0100]  Use pkexec as in the ISO. Seems to work now.                               karasu      {59222667}
[2017-01-19 04:47:18 -0600]  Update packages.xml                                                    Dustin Falgout  {cb8b5021}
[2017-01-18 11:20:02 -0600]  change greeter to gtk greeter (temporarily)                            Dustin Falgout  {c699cd99}
[2017-01-18 17:10:54 +0100]  Add orca to all gtk DEs                                                    karasu      {28838f0a}
[2017-01-17 19:50:40 +0100]  fix typo                                                                   karasu      {83de8dee}